--- a/sprint8/package.json
+++ b/sprint8/package.json
@@ -15,6 +15,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@nextui-org/react": "^2.2.9",
+    "framer-motion": "^10.16.15",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18"
